// Proto definition for API service.

syntax = "proto3";
package apiproto;
option go_package = ".;proto";

message ServerConfig {
    DatabaseConfig DB_conf = 1;
    DNSConfig dns_conf = 2;
    string listen_addr = 3;
}

// DatabaseConfig is the configuration for the Postgres database.
message DatabaseConfig {
    // Hostname is in format host:port.
    string hostname = 1;
    string username = 2;
    string password = 3;
    string database_name = 4;
}

message DNSConfig {
    repeated string root_zones = 1;
    repeated string axfr_list = 2;
    // listen port can be set to :53 to run standalong, however this requires running
    // the service as root. As such, the default is to bind to :5353.
    // You MUST preface it with a ':'
    string listen_port = 3;
    string ns_addr = 4;
    string admin_email = 5;
    repeated string axfr_to = 6;
}

message DNSRecord {
    string name = 1;
    // type should be the same as the decimal ID for the record type.
    uint32 type = 2;
    // value is optional for some records, but required for many.
    string value = 3;
    uint32 ttl = 4;
    string zone = 5;
    string user = 6;
    // priority is set for MX records.
    string priority = 7;
}
